--- a/.env
+++ b/.env
@@ -1,3 +1,23 @@
-THEME=https://raw.githubusercontent.com/seanwcom/Red-Graphite-for-Obsidian/HEAD/theme.css
+THEME=https://raw.githubusercontent.com/jarodise/Dracula-for-Obsidian.md/HEAD/theme.css
 BASE_THEME=dark
+SITE_NAME_HEADER=kuboto_809
+SITE_BASE_URL=
+SHOW_CREATED_TIMESTAMP=false
+TIMESTAMP_FORMAT=MMM dd, yyyy h:mm a
+SHOW_UPDATED_TIMESTAMP=false
+NOTE_ICON_DEFAULT=
+NOTE_ICON_TITLE=false
+NOTE_ICON_FILETREE=false
+NOTE_ICON_INTERNAL_LINKS=false
+NOTE_ICON_BACK_LINKS=false
+STYLE_SETTINGS_CSS="body.css-settings-manager { } body.theme-light.css-settings-manager { } body.theme-dark.css-settings-manager { }"
 dgHomeLink=true
+dgPassFrontmatter=false
+dgShowBacklinks=false
+dgShowLocalGraph=true
+dgShowInlineTitle=true
+dgShowFileTree=false
+dgEnableSearch=false
+dgShowToc=true
+dgLinkPreview=false
+dgShowTags=false
