--- a/.env
+++ b/.env
@@ -13,11 +13,11 @@ NOTE_ICON_BACK_LINKS=false
 STYLE_SETTINGS_CSS="body.css-settings-manager { } body.theme-light.css-settings-manager { } body.theme-dark.css-settings-manager { }"
 dgHomeLink=true
 dgPassFrontmatter=false
-dgShowBacklinks=false
+dgShowBacklinks=true
 dgShowLocalGraph=true
 dgShowInlineTitle=true
 dgShowFileTree=false
-dgEnableSearch=false
+dgEnableSearch=true
 dgShowToc=true
 dgLinkPreview=false
 dgShowTags=false
