--- a/.env
+++ b/.env
@@ -1,6 +1,5 @@
-THEME=https://raw.githubusercontent.com/mrglitchbyte/obsidian_everforest/HEAD/theme.css
-BASE_THEME=dark
 SITE_NAME_HEADER=kuboto_809
+SITE_MAIN_LANGUAGE=en
 SITE_BASE_URL=
 SHOW_CREATED_TIMESTAMP=false
 TIMESTAMP_FORMAT=MMM dd, yyyy h:mm a
@@ -10,7 +9,10 @@ NOTE_ICON_TITLE=false
 NOTE_ICON_FILETREE=false
 NOTE_ICON_INTERNAL_LINKS=false
 NOTE_ICON_BACK_LINKS=false
-STYLE_SETTINGS_CSS="body.css-settings-manager { } body.theme-light.css-settings-manager { } body.theme-dark.css-settings-manager { }"
+STYLE_SETTINGS_CSS=body.css-settings-manager { } body.theme-light.css-settings-manager { } body.theme-dark.css-settings-manager { }
+STYLE_SETTINGS_BODY_CLASSES=theme-dark mod-windows is-frameless is-hidden-frameless obsidian-app is-maximized is-translucent show-inline-title show-view-header highlightr-rounded minimal-theme minimal-everforest-dark minimal-default-light colorful-headings links-int-on links-ext-on full-width-media minimal-folding minimal-readable-off minimal-light minimal-dark-tonal chart-default-width table-default-width img-default-width iframe-default-width map-default-width table-height-adjust contextual-typography css-settings-manager callouts-default trim-cols checkbox-circle pdf-seamless-on pdf-invert-dark pdf-blend-light sidebar-tabs-default ribbon-hidden maximize-tables-off tabs-default tab-stack-top minimal-tab-title-hover is-focused
+THEME=https://raw.githubusercontent.com/mrglitchbyte/obsidian_everforest/HEAD/theme.css
+BASE_THEME=dark
 dgHomeLink=true
 dgPassFrontmatter=false
 dgShowBacklinks=true
