--- a/.env
+++ b/.env
@@ -12,7 +12,7 @@ NOTE_ICON_BACK_LINKS=false
 STYLE_SETTINGS_CSS=body.css-settings-manager { } body.theme-light.css-settings-manager { } body.theme-dark.css-settings-manager { }
 STYLE_SETTINGS_BODY_CLASSES=theme-dark mod-windows is-frameless is-hidden-frameless obsidian-app is-maximized is-translucent show-inline-title show-view-header highlightr-rounded minimal-theme minimal-everforest-dark minimal-default-light colorful-headings links-int-on links-ext-on full-width-media minimal-folding minimal-readable-off minimal-light chart-default-width table-default-width img-default-width iframe-default-width map-default-width table-height-adjust contextual-typography css-settings-manager minimal-dark-tonal callouts-default trim-cols checkbox-circle pdf-seamless-on pdf-invert-dark pdf-blend-light sidebar-tabs-default ribbon-hidden maximize-tables-off tabs-default tab-stack-top minimal-tab-title-hover is-focused
 THEME=https://raw.githubusercontent.com/caro401/royal-velvet/HEAD/theme.css
-BASE_THEME=dark
+BASE_THEME=light
 dgHomeLink=true
 dgPassFrontmatter=false
 dgShowBacklinks=true
